--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>HyperText Markup Language</title>
     </head>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p" rel="stylesheet">
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/reset.css">
+    <link rel="stylesheet" href="/style.css">
     <body>
         <div class="headbody">
             <div class="up">
@@ -22,7 +22,7 @@
                     <td>意味</td>
                 </tr>
                 <tr>
-                    <td><img src="image/Flag_of_the_People's_Republic_of_China.svg" height="80px"></td>
+                    <td><img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Flag_of_the_People%27s_Republic_of_China.svg" height="80px"></td>
                     <td><p>赤い下地には共産主義革命、左上の大きい星には中国共産党の指導力、4つの星は労働者・農民・資本家・知識人の4つの階級を意味している。</p></td>
                 </tr>
             </table>
